--- a/app/src/main/res/layout/item_view_card.xml
+++ b/app/src/main/res/layout/item_view_card.xml
@@ -1,62 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/chapter_card"
+    android:id="@+id/item_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    app:cardElevation="1dp"
+    android:clickable="true"
+    android:focusable="true"
+    app:strokeColor="@color/stroke_color"
+    app:strokeWidth="1dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:id="@+id/chapter_text_layout"
+            android:id="@+id/name_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_layout"
-            app:layout_constraintHorizontal_weight="6"
+            app:layout_constraintHorizontal_weight="9"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/chapter_title"
+                android:id="@+id/tv_card_header"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:maxLines="2"
-                android:textAppearance="?attr/textAppearanceBody2"
-                tools:text="sdfsdfsdfsdfasdfasdfsadfsadfasdfasdfasdfsadfsasdfsadfsadfasdfsdfsadfsafdadfsdaf" />
-        </LinearLayout>
+                android:textAppearance="?attr/textAppearanceHeadline6" />
 
+            <TextView
+                android:id="@+id/tv_card_subheader"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textAppearance="?attr/textAppearanceBody2"
+                android:textColor="?android:attr/textColorSecondary" />
+        </LinearLayout>
+        <!--buttons-->
         <LinearLayout
             android:id="@+id/btn_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             android:orientation="horizontal"
-            android:gravity="end"
-            app:layout_constraintBottom_toBottomOf="@+id/chapter_text_layout"
+            app:layout_constraintBottom_toBottomOf="@+id/name_layout"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_weight="3"
-            app:layout_constraintStart_toEndOf="@+id/chapter_text_layout"
-            app:layout_constraintTop_toTopOf="@+id/chapter_text_layout">
+            app:layout_constraintHorizontal_weight="1"
+            app:layout_constraintStart_toEndOf="@+id/name_layout"
+            app:layout_constraintTop_toTopOf="@+id/name_layout">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_edit_chapter"
+                android:id="@+id/btn_delete"
                 style="?attr/borderlessButtonStyle"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                app:icon="@drawable/pencil"
-                app:iconGravity="textStart" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_delete_chapter"
-                style="?attr/borderlessButtonStyle"
-                android:layout_width="50dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:icon="@drawable/ic_baseline_clear_24"
                 app:iconGravity="textStart" />
@@ -64,3 +66,4 @@
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
+
