--- a/app/src/main/res/layout/item_view_editable_card.xml
+++ b/app/src/main/res/layout/item_view_editable_card.xml
@@ -1,64 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/item_card"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardElevation="1dp"
-    android:clickable="true"
-    android:focusable="true"
-    app:strokeColor="@color/stroke_color"
-    app:strokeWidth="1dp">
+    android:layout_margin="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:id="@+id/name_layout"
+            android:id="@+id/text_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_layout"
-            app:layout_constraintHorizontal_weight="9"
+            app:layout_constraintHorizontal_weight="6"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/tv_card_header"
+                android:id="@+id/card_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?attr/textAppearanceHeadline6" />
-
-            <TextView
-                android:id="@+id/tv_card_subheader"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:maxLines="4"
                 android:textAppearance="?attr/textAppearanceBody2"
-                android:textColor="?android:attr/textColorSecondary" />
+                tools:text="sdfsdfsdfsdfasdfasdfsadfsadfasdfasdfasdfsadfsasdfsadfsadfasdfsdfsadfsafdadfsdaf" />
         </LinearLayout>
-        <!--buttons-->
+
         <LinearLayout
             android:id="@+id/btn_layout"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
+            android:gravity="center"
             android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="@+id/name_layout"
+            app:layout_constraintBottom_toBottomOf="@+id/text_layout"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_weight="1"
-            app:layout_constraintStart_toEndOf="@+id/name_layout"
-            app:layout_constraintTop_toTopOf="@+id/name_layout">
+            app:layout_constraintHorizontal_weight="3"
+            app:layout_constraintStart_toEndOf="@+id/text_layout"
+            app:layout_constraintTop_toTopOf="@+id/text_layout">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_delete_user"
+                android:id="@+id/btn_edit"
                 style="?attr/borderlessButtonStyle"
-                android:layout_width="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                app:icon="@drawable/pencil"
+                app:iconGravity="textStart" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_delete"
+                style="?attr/borderlessButtonStyle"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 app:icon="@drawable/ic_baseline_clear_24"
                 app:iconGravity="textStart" />
@@ -66,4 +64,3 @@
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
-
