--- a/app/src/main/res/menu/chapter_bottom_menu.xml
+++ b/app/src/main/res/menu/chapter_bottom_menu.xml
@@ -14,7 +14,7 @@
         android:icon="@drawable/flask_empty_outline"
         android:title="@string/label_discussion" />
     <item
-        android:id="@+id/quizFragment"
+        android:id="@+id/quizListFragment"
         android:icon="@drawable/pencil"
         android:title="@string/label_quiz" />
     <!--        <item-->
