--- a/app/src/main/res/layout/item_view_edit_quiz.xml
+++ b/app/src/main/res/layout/item_view_edit_quiz.xml
@@ -15,50 +15,91 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/et_question_layout"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/label_question">
+            android:layout_height="wrap_content">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_question"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-        </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/et_question_layout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="0dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btn_delete_question"
+                android:layout_height="wrap_content"
+                app:layout_constraintHorizontal_weight="6"
+                android:hint="@string/label_question">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_question"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Button
+                android:id="@+id/btn_delete_question"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="true"
+                android:insetTop="0dp"
+                android:insetBottom="0dp"
+                app:icon="@drawable/ic_baseline_clear_24"
+
+                app:iconTint="#000000"
+                app:layout_constraintBottom_toBottomOf="@+id/et_question_layout"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toEndOf="@+id/et_question_layout"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
             <RadioGroup
                 android:id="@+id/choice_radio_group"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/et_choice_layout"
-                app:layout_constraintBottom_toBottomOf="@+id/et_choice_layout"
-                app:layout_constraintHorizontal_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="0dp">
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="@+id/et_choice_layout"
+                app:layout_constraintEnd_toStartOf="@+id/et_choice_layout"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
             </RadioGroup>
+
             <LinearLayout
                 android:id="@+id/et_choice_layout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toEndOf="@+id/choice_radio_group"
-                app:layout_constraintHorizontal_weight="9"
-                app:layout_constraintTop_toTopOf="parent"
+                android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:orientation="vertical">
+                app:layout_constraintHorizontal_weight="9"
+                app:layout_constraintStart_toEndOf="@+id/choice_radio_group"
+                app:layout_constraintTop_toTopOf="parent">
 
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
+
         <Button
             android:id="@+id/btn_add_choice"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/label_add" />
+            android:paddingLeft="0dp"
+            android:paddingTop="0dp"
+            android:paddingRight="0dp"
+            android:paddingBottom="0dp"
+            android:text="@string/label_add_choice"
+            android:textColor="@color/purple_500"
+            android:textSize="10sp"
+            app:icon="@drawable/ic_baseline_add_24"
+            app:iconGravity="textStart"
+            app:iconPadding="0dp"
+            app:iconSize="20sp"
+            app:iconTint="@color/purple_500" />
     </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
