--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -18,9 +18,8 @@
         android:layout_height="260dp"
         android:background="@color/tarc_blue_700"
         android:orientation="vertical"
-        android:paddingStart="40dp"
+        android:paddingHorizontal="16dp"
         android:paddingTop="140dp"
-        android:paddingEnd="40dp"
         android:theme="@style/Theme.TARCLearnMobile"
         tools:context=".ui.about.ProfileFragment">
 
@@ -41,7 +40,13 @@
             android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
             android:textColor="#FFFFFF"
             tools:text="SOH JING HENN" />
-
+        <TextView
+            android:id="@+id/tvEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{User.email}"
+            android:textColor="#FFFFFF"
+            tools:text="sohjh-wp18@student.tarc.edu.my" />
         <TextView
             android:id="@+id/tvUserId"
             android:layout_width="match_parent"
