--- a/app/src/main/res/layout/fragment_manage_user.xml
+++ b/app/src/main/res/layout/fragment_manage_user.xml
@@ -52,57 +52,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/bottom_sheet"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:background="@drawable/rounded"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
-
-                <ImageView
-                    android:id="@+id/icon"
-                    android:layout_width="70dp"
-                    android:layout_height="wrap_content"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ic_baseline_remove_24"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:ignore="ContentDescription" />
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/etLayout_add_user"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="30dp"
-                    android:hint="@string/label_user_id"
-                    app:layout_constraintEnd_toStartOf="@+id/btn_add_user"
-                    app:layout_constraintHorizontal_weight="7"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/icon">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/et_add_user"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <Button
-                    android:id="@+id/btn_add_user"
-                    android:layout_width="0dp"
-                    android:layout_height="65dp"
-                    android:layout_marginStart="15dp"
-                    android:text="@string/label_add"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_weight="3"
-                    app:layout_constraintStart_toEndOf="@id/etLayout_add_user"
-                    app:layout_constraintTop_toTopOf="@id/etLayout_add_user" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab_add_user"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="16dp"
+                app:srcCompat="@drawable/ic_baseline_add_24"
+                tools:ignore="ContentDescription" />
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
