Added My Discussions functionality to show a list of discussion threads created/participated by the user

--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -21,7 +21,7 @@
         android:paddingHorizontal="16dp"
         android:paddingTop="140dp"
         android:theme="@style/Theme.TARCLearnMobile"
-        tools:context=".ui.about.ProfileFragment">
+        tools:context=".ui.mydiscussion.ProfileFragment">
 
         <TextView
             android:id="@+id/tvWelcome"
