--- a/app/src/main/res/layout/fragment_manage_material.xml
+++ b/app/src/main/res/layout/fragment_manage_material.xml
@@ -78,6 +78,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 android:hint="@string/label_description"
+                app:helperText="@string/label_optional"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_material_title_layout">
@@ -95,7 +96,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
-                android:hint="@string/label_pick_material"
+                android:hint="@string/label_file_name"
                 app:layout_constraintEnd_toStartOf="@+id/btn_choose_material"
                 app:layout_constraintHorizontal_weight="5"
                 app:layout_constraintStart_toStartOf="parent"
